Linked all fields except description on the list view

--- a/Vimly/VideoTableViewCell.xib
+++ b/Vimly/VideoTableViewCell.xib
@@ -20,30 +20,21 @@
                 <rect key="frame" x="0.0" y="0.0" width="450" height="160"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TZE-O9-qxO">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-video.png" translatesAutoresizingMaskIntoConstraints="NO" id="TZE-O9-qxO">
                         <rect key="frame" x="8" y="8" width="200" height="144"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="TZE-O9-qxO" secondAttribute="height" multiplier="25:18" id="JNR-S7-yYI"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Video Title" textAlignment="natural" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceg-Dv-oL9">
-                        <rect key="frame" x="216" y="8" width="226" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="d6J-PT-Woz"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t9a-kN-9Rd">
-                        <rect key="frame" x="216" y="112" width="40" height="40"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t9a-kN-9Rd">
+                        <rect key="frame" x="216" y="106" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="FU3-0y-MmC"/>
                             <constraint firstAttribute="height" constant="40" id="w8j-pV-Mg7"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAc-m0-1sV">
-                        <rect key="frame" x="264" y="110" width="178" height="21"/>
+                        <rect key="frame" x="264" y="104" width="178" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="ySf-dW-HoZ"/>
                         </constraints>
@@ -52,7 +43,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uploaded on " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zYF-Wk-Vsb">
-                        <rect key="frame" x="264" y="131" width="178" height="21"/>
+                        <rect key="frame" x="264" y="125" width="178" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="mW8-kK-6OQ"/>
                         </constraints>
@@ -60,20 +51,27 @@
                         <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" text="Video Title" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Esu-UZ-UI5">
+                        <rect key="frame" x="216" y="8" width="226" height="94"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="PAc-m0-1sV" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="3Si-rs-SVu"/>
                     <constraint firstItem="zYF-Wk-Vsb" firstAttribute="leading" secondItem="t9a-kN-9Rd" secondAttribute="trailing" constant="8" id="8q1-2m-VCz"/>
                     <constraint firstItem="TZE-O9-qxO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="L2w-kP-kp4"/>
-                    <constraint firstItem="ceg-Dv-oL9" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Pfk-h5-IF3"/>
-                    <constraint firstItem="ceg-Dv-oL9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="UBx-Jj-xNo"/>
+                    <constraint firstItem="PAc-m0-1sV" firstAttribute="top" secondItem="Esu-UZ-UI5" secondAttribute="bottom" constant="2" id="MPQ-uQ-mBT"/>
+                    <constraint firstItem="Esu-UZ-UI5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="NT5-mt-qdr"/>
                     <constraint firstItem="t9a-kN-9Rd" firstAttribute="leading" secondItem="TZE-O9-qxO" secondAttribute="trailing" constant="8" id="Xlc-vb-YaO"/>
                     <constraint firstItem="PAc-m0-1sV" firstAttribute="leading" secondItem="t9a-kN-9Rd" secondAttribute="trailing" constant="8" id="YGU-hC-Tkq"/>
                     <constraint firstItem="TZE-O9-qxO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="bGv-uJ-4Na"/>
-                    <constraint firstAttribute="bottom" secondItem="zYF-Wk-Vsb" secondAttribute="bottom" constant="7.5" id="fTF-hu-PeR"/>
-                    <constraint firstItem="ceg-Dv-oL9" firstAttribute="leading" secondItem="TZE-O9-qxO" secondAttribute="trailing" constant="8" id="mGE-Im-Zn9"/>
+                    <constraint firstItem="Esu-UZ-UI5" firstAttribute="leading" secondItem="TZE-O9-qxO" secondAttribute="trailing" constant="8" id="dSL-7y-wNt"/>
+                    <constraint firstAttribute="bottom" secondItem="zYF-Wk-Vsb" secondAttribute="bottom" constant="13.666666666666657" id="fTF-hu-PeR"/>
+                    <constraint firstItem="Esu-UZ-UI5" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="nrl-fz-wQV"/>
                     <constraint firstItem="zYF-Wk-Vsb" firstAttribute="top" secondItem="PAc-m0-1sV" secondAttribute="bottom" id="qI5-8F-RoK"/>
-                    <constraint firstAttribute="bottom" secondItem="t9a-kN-9Rd" secondAttribute="bottom" constant="7.5" id="roC-Bl-PeN"/>
+                    <constraint firstAttribute="bottom" secondItem="t9a-kN-9Rd" secondAttribute="bottom" constant="13.666666666666657" id="roC-Bl-PeN"/>
                     <constraint firstAttribute="bottom" secondItem="TZE-O9-qxO" secondAttribute="bottom" constant="7.5" id="u5h-k7-5Wa"/>
                     <constraint firstAttribute="trailing" secondItem="zYF-Wk-Vsb" secondAttribute="trailing" constant="8" id="zWm-f1-PhH"/>
                 </constraints>
@@ -83,9 +81,12 @@
                 <outlet property="userThumbnailImage" destination="t9a-kN-9Rd" id="kZz-Bv-P41"/>
                 <outlet property="usernameLabel" destination="PAc-m0-1sV" id="zeK-jF-Ga4"/>
                 <outlet property="videoThumbnailImage" destination="TZE-O9-qxO" id="BXg-ww-dMd"/>
-                <outlet property="videoTitleLabel" destination="ceg-Dv-oL9" id="MRc-aC-bN6"/>
+                <outlet property="videoTitleTextView" destination="Esu-UZ-UI5" id="aIH-eG-gbB"/>
             </connections>
             <point key="canvasLocation" x="99" y="112"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="placeholder-video.png" width="900" height="506"/>
+    </resources>
 </document>
